--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1173,6 +1173,7 @@ text-align:center;
 
 	.m-channel-info span:first-child{float: left;}
 	.m-channel-info span:last-child{float: right;text-align: right;}
+	div#searchmapshare ul { display: block; float: left; width: 100%; padding-left: 0;}
 
 }
 
