--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -647,7 +647,11 @@ span.tool-tip[data-text="Email"]:before{ left: calc(50% - 53px); }
 .map-layer-top {
 	padding-left: 10px;
 	padding-right: 10px;
-	background: #333 !important; 
+    background-color: #333333 !important;
+    min-height: 52px;
+    box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.6);
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 .map-layer-bottom {
@@ -1180,7 +1184,17 @@ text-align:center;
 	    white-space: nowrap;
 	    font-size: 12px;
 	    width: 50%;
+	    color: #e9e9e9;
 	}
+	/*.m-channel-info .dropdown {
+    float: right;
+    }
+    .m-channel-info .dropdown-menu
+    {
+    	right:0;
+    	left:inherit !important;
+    	    font-size: 14px;
+    }*/
 
 	.m-channel-info span:first-child{float: left;}
 	.m-channel-info span:last-child{float: right;text-align: right;}
@@ -1523,6 +1537,29 @@ span.mobile--share {
     background: url(../images/pencil-1.png) no-repeat right center;
     background-size: 18px;
 }
+.m-channel-info span:nth-child(1)
+{
+	background-position: 126px center;
+}
+.m-channel-info span:nth-child(2)
+{
+	background-position: 94px center;
+}
+.m-channel-info .dropdown {
+    position: absolute;
+    right: 20px;
+    top: 22px;
+}
+.m-channel-info .dropdown-menu {
+    right: 0;
+    position: absolute;
+    left: inherit;
+    min-width: 162px;
+}
+.m-channel-info h4.menu-title {
+    /* padding: 0px !important; */
+    margin: 0px;
+}
 .m-channel-info span b {
 	font-size: 12px;
 	color: #00ccff; }
@@ -1537,11 +1574,11 @@ li.map-list-label.subtitle {
 
 /* Notification Panel */
 
-.dropdown {
+/*.dropdown {
     display:inline-block;
     margin-left:20px;
     padding:10px;
-  }
+  }*/
 
 
 .glyphicon-bell {
